examples/test/testpolicy8312.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8312
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key6: value14
      key9: value11
      key22: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value24
          key34: value46
      podSelector:
        matchLabels:
          key49: value26
          key10: value17
          key15: value44
